# TriangulationAndSubdivision

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Subdivision.cpp  Subdivision.h  Txt2pcd.cpp  Txt2pcd.h  general_hd.h  greedy_projection.cpp  greedy_projection.h  main.cpp  point_collection.cpp  point_collection.h
